k8s/jbjmllc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jbjmllc-review-system
  labels:
    app.kubernetes.io/part-of: ct-review
    instance: jbjmllc
